Error handeling and submit sucess message

--- a/viajantes2-spa/src/app/ViagemMasterData/components/tripulant/tripulant.component.html
+++ b/viajantes2-spa/src/app/ViagemMasterData/components/tripulant/tripulant.component.html
@@ -57,6 +57,14 @@
   <a mat-button (click)="submit()">Submit</a>
 </div>
 
+<div *ngIf="hasSubmited">
+  <ul>
+      <div *ngFor="let submitMessage of submitMessages">
+          <mat-sucess-label>{{submitMessage}}</mat-sucess-label>
+      </div>
+  </ul>
+</div>
+
 <div *ngIf="hasError">
   <ul>
       <div *ngFor="let errorMessage of errorMessages">
