Add Tripulant Service SPA

--- a/viajantes2-spa/src/app/overall-components/side-nav/side-nav.component.html
+++ b/viajantes2-spa/src/app/overall-components/side-nav/side-nav.component.html
@@ -30,6 +30,7 @@
         <a mat-list-item (click)="goToVehicles()"><mat-icon aria-hidden="false" aria-label="Example home icon">directions_bus</mat-icon>&nbsp; &nbsp;Vehicles</a>
         <a mat-list-item (click)="goToVehicleServices()"><mat-icon aria-hidden="false" aria-label="Example home icon">departure_board</mat-icon>&nbsp; &nbsp;Vehicle Services</a>
         <a mat-list-item (click)="goToTripulants()"><mat-icon aria-hidden="false" aria-label="Example home icon">person_add</mat-icon>&nbsp; &nbsp;Tripulants</a>
+        <a mat-list-item (click)="goToTripulantServices()"><mat-icon aria-hidden="false" aria-label="Example home icon">group_add</mat-icon>&nbsp; &nbsp;Tripulant Services</a>
         <a mat-list-item (click)="goToTrips()"><mat-icon aria-hidden="false" aria-label="Example home icon">navigation</mat-icon>&nbsp; &nbsp;Trips</a>
         <a mat-list-item (click)="goToWorkBlocks()"><mat-icon aria-hidden="false" aria-label="Example home icon">calendar_today</mat-icon>&nbsp; &nbsp;Work Blocks</a>
       </div>
