--- a/viajantes2-spa/src/app/ViagemMasterData/components/tripulant-service/tripulant-service.component.html
+++ b/viajantes2-spa/src/app/ViagemMasterData/components/tripulant-service/tripulant-service.component.html
@@ -1,5 +1,29 @@
 <h1>&nbsp; Tripulant Service</h1>
 
+<div>
+    <a mat-button (click)="setAdd()">{{isAdding ? 'Close create mode' : 'Create Vehicle'}}</a>
+</div>
+
+<div *ngIf="!isAdding; else createVehicleServiceTemplate">
+    <!-- <mat-form-field>
+        <mat-label>Search: </mat-label>
+        <input matInput (keyup)="applyFilter($event)" placeholder="Ex. Aguiar de Sousa" #input>
+    </mat-form-field> -->
+    <table mat-table [dataSource]="dataSource" class="mat-elevation-z8">
+        <ng-container matColumnDef="name">
+            <th mat-header-cell *matHeaderCellDef> Name (Licence Number) </th>
+            <td mat-cell *matCellDef="let tripulant"> {{tripulant.tripulant.name}}({{tripulant.tripulant.licenceNumber}}) </td>
+        </ng-container>
+        <ng-container matColumnDef="date">
+            <th mat-header-cell *matHeaderCellDef> Date </th>
+            <td mat-cell *matCellDef="let tripulant"> {{tripulant.date | date:'mediumDate'}} </td>
+        </ng-container>
+        <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+        <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+    </table>
+</div>
+
+<ng-template #createVehicleServiceTemplate>
 <div [formGroup]="tripulantServiceForm">
     <section class="example-section">
         <mat-form-field appearance="fill">
@@ -37,3 +61,4 @@
         </div>
     </ul>
 </div>
+</ng-template>
